Update index.html to add form tag

--- a/index.html
+++ b/index.html
@@ -10,11 +10,13 @@
     <main>
         <h1>Awesome books</h1>
         <div class="books">
-            
         </div>
-        <input type="text" placeholder="Title">
-        <input type="text" placeholder="Author">
-        <button type="submit">Add</button>
+        <form>
+            <input name="title" type="text" placeholder="Title">
+            <input name="author" type="text" placeholder="Author">
+            <button type="submit">Add</button>
+        </form>
     </main>
+    <script src="./script.js"></script>
 </body>
 </html>
