--- a/index.html
+++ b/index.html
@@ -11,12 +11,12 @@
         <h1>Awesome books</h1>
         <div class="books">
         </div>
-        <form>
+        <form style="display: flex;flex-direction: column;width: 40%;gap: 10px;">
             <input name="title" type="text" placeholder="Title">
             <input name="author" type="text" placeholder="Author">
             <button type="submit">Add</button>
         </form>
     </main>
-    <script src="./script.js"></script>
+    <script  src="./script.js"></script>
 </body>
 </html>
